src/routes/login/login.css
.login-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-left: auto;
  margin-right: auto;
  width: 400px;
  max-width: 90%;
  box-shadow: 0 0 15px lightgray;
  border-radius: 15px;
  margin-bottom: 20px;
}

#login-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  height: 200px;
}

input {
  font-size: 20px;
  border-radius: 10px;
  box-shadow: 0px 0px 5px;
  width: 200px;
  max-width: 80%;
  border: none;
  margin: 5px
}

label {
  align-self: flex-start;
}

.button-container {
  margin-top: 20px;
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
  justify-content: center;
}

